@@ -16,12 +16,13 @@ import java.util.Optional;
 
 import javax.annotation.Nonnull;
 import javax.annotation.Nullable;
-import javax.persistence.criteria.Expression;
-import javax.persistence.criteria.From;
-import javax.persistence.criteria.Order;
-import javax.persistence.criteria.Path;
-import javax.persistence.criteria.Selection;
-import javax.persistence.criteria.Subquery;
+
+import jakarta.persistence.criteria.Expression;
+import jakarta.persistence.criteria.From;
+import jakarta.persistence.criteria.Order;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Selection;
+import jakarta.persistence.criteria.Subquery;
 
 import org.apache.olingo.commons.api.edm.EdmEntityType;
 import org.apache.olingo.commons.api.ex.ODataException;
@@ -30,6 +31,7 @@ import org.apache.olingo.server.api.OData;
 import org.apache.olingo.server.api.ODataApplicationException;
 import org.apache.olingo.server.api.uri.UriParameter;
 import org.apache.olingo.server.api.uri.queryoption.expression.ExpressionVisitException;
+import org.apache.olingo.server.api.uri.queryoption.expression.VisitableExpression;
 
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAAssociationPath;
 import com.sap.olingo.jpa.metadata.core.edm.mapper.api.JPAEntityType;
@@ -40,9 +42,11 @@ import com.sap.olingo.jpa.metadata.core.edm.mapper.exception.ODataJPAModelExcept
 import com.sap.olingo.jpa.processor.cb.ProcessorSubquery;
 import com.sap.olingo.jpa.processor.core.api.JPAODataPage;
 import com.sap.olingo.jpa.processor.core.api.JPAODataRequestContextAccess;
+import com.sap.olingo.jpa.processor.core.api.JPAServiceDebugger.JPARuntimeMeasurement;
 import com.sap.olingo.jpa.processor.core.exception.ODataJPAProcessorException;
 import com.sap.olingo.jpa.processor.core.exception.ODataJPAQueryException;
 import com.sap.olingo.jpa.processor.core.filter.JPAFilterCrossComplier;
+import com.sap.olingo.jpa.processor.core.filter.JPAFilterRestrictionsWatchDog;
 import com.sap.olingo.jpa.processor.core.filter.JPAOperationConverter;
 import com.sap.olingo.jpa.processor.core.processor.JPAODataInternalRequestContext;
 
@@ -54,51 +58,53 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
   final Map<String, From<?, ?>> joinTables;
 
   JPAExpandFilterQuery(final OData odata, final JPAODataRequestContextAccess requestContext,
-      final JPANavigationPropertyInfo naviInfo, final JPAAbstractQuery parent,
+      final JPANavigationPropertyInfo navigationInfo, final JPAAbstractQuery parent,
       final JPAAssociationPath childAssociation) throws ODataException {
 
     super(odata,
         requestContext.getEdmProvider().getServiceDocument(),
-        (EdmEntityType) naviInfo.getUriResource().getType(),
+        (EdmEntityType) navigationInfo.getUriResource().getType(),
         requestContext.getEntityManager(),
         parent,
         null,
-        naviInfo.getAssociationPath(),
+        navigationInfo.getAssociationPath(),
         requestContext.getClaimsProvider());
     this.requestContext = requestContext;
-    this.keyPredicates = naviInfo.getKeyPredicates();
+    this.keyPredicates = navigationInfo.getKeyPredicates();
     this.subQuery = parent.getQuery().subquery(this.jpaEntity.getKeyType());
     this.locale = parent.getLocale();
-    this.navigationInfo = naviInfo;
+    this.navigationInfo = navigationInfo;
     this.childAssociation = Optional.ofNullable(childAssociation);
     this.joinTables = new HashMap<>();
     this.debugger = requestContext.getDebugger();
-    setFilter(navigationInfo);
+    setFilter(this.navigationInfo);
   }
 
   public JPAExpandFilterQuery(final OData odata, final JPAODataRequestContextAccess requestContext,
-      final JPANavigationPropertyInfo naviInfo, final JPAAbstractQuery parent, final JPAAssociationPath association,
+      final JPANavigationPropertyInfo navigationInfo, final JPAAbstractQuery parent,
+      final JPAAssociationPath association,
       final JPAAssociationPath childAssociation) throws ODataException {
 
     super(odata,
         requestContext.getEdmProvider().getServiceDocument(),
-        (EdmEntityType) naviInfo.getUriResource().getType(),
+        (EdmEntityType) navigationInfo.getUriResource().getType(),
         requestContext.getEntityManager(),
         parent,
         null,
         association,
         requestContext.getClaimsProvider());
     this.requestContext = requestContext;
-    this.keyPredicates = naviInfo.getKeyPredicates();
+    this.keyPredicates = navigationInfo.getKeyPredicates();
     this.subQuery = parent.getQuery().subquery(this.jpaEntity.getKeyType());
     this.locale = parent.getLocale();
-    this.navigationInfo = naviInfo;
+    this.navigationInfo = navigationInfo;
     this.childAssociation = Optional.ofNullable(childAssociation);
     this.joinTables = new HashMap<>();
     this.debugger = requestContext.getDebugger();
-    setFilter(navigationInfo);
+    setFilter(this.navigationInfo);
   }
 
+  @SuppressWarnings("unchecked")
   @Override
   public From<?, ?> getRoot() {
     return queryRoot;
@@ -110,34 +116,37 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
   @SuppressWarnings("unchecked")
   @Nonnull
   @Override
-  public <T> Subquery<T> getSubQuery(@Nullable final Subquery<?> childQuery) throws ODataApplicationException {
+  public <T> Subquery<T> getSubQuery(@Nullable final Subquery<?> childQuery,
+      final VisitableExpression expression) throws ODataApplicationException {
     // Last childQuery == null
-    final int handle = debugger.startRuntimeMeasurement(this, "createSubQuery");
-    final ProcessorSubquery<T> nextQuery = (ProcessorSubquery<T>) this.subQuery;
-    final JPAQueryPair queries = createQueries(childQuery);
-    final List<JPAAssociationPath> orderByAttributes = extractOrderByNaviAttributes(navigationInfo.getUriInfo()
-        .getOrderByOption());
-    createRoots(childQuery, queries, nextQuery);
-    buildJoinTable(orderByAttributes, emptyList(), childQuery);
-    final List<JPAPath> selections = selectionPathIn();
-    nextQuery.where(createWhere(childQuery));
-    nextQuery.multiselect(selectIn(childQuery, selections));
-    nextQuery.orderBy(createOrderBy(childQuery));
-    nextQuery.setFirstResult(getSkipValue(childQuery));
-    nextQuery.setMaxResults(getTopValue(childQuery));
-    nextQuery.groupBy(createGroupBy(childQuery, orderByAttributes, selections));
-    debugger.stopRuntimeMeasurement(handle);
-    return nextQuery;
+    try (JPARuntimeMeasurement measurement = debugger.newMeasurement(this, "createSubQuery")) {
+      final ProcessorSubquery<T> nextQuery = (ProcessorSubquery<T>) this.subQuery;
+      final JPAQueryPair queries = createQueries(childQuery);
+      final List<JPAAssociationPath> orderByAttributes = extractOrderByNavigationAttributes(navigationInfo.getUriInfo()
+          .getOrderByOption());
+      createRoots(childQuery, queries, nextQuery);
+      buildJoinTable(orderByAttributes, emptyList(), childQuery);
+      final List<JPAPath> selections = selectionPathIn();
+      nextQuery.where(createWhere(childQuery));
+      nextQuery.multiselect(selectIn(childQuery, selections));
+      nextQuery.orderBy(createOrderBy(childQuery));
+      nextQuery.setFirstResult(getSkipValue(childQuery));
+      nextQuery.setMaxResults(getTopValue(childQuery));
+      nextQuery.groupBy(createGroupBy(childQuery, orderByAttributes, selections));
+      return nextQuery;
+    }
   }
 
-  protected final JPAFilterCrossComplier addFilterCompiler(final JPANavigationPropertyInfo naviInfo)
-      throws ODataJPAModelException, ODataJPAProcessorException {
+  protected final JPAFilterCrossComplier addFilterCompiler(final JPANavigationPropertyInfo navigationInfo)
+      throws ODataJPAModelException, ODataJPAProcessorException, ODataJPAQueryException {
 
     final JPAOperationConverter converter = new JPAOperationConverter(cb, requestContext.getOperationConverter());
-    final JPAODataRequestContextAccess subContext = new JPAODataInternalRequestContext(naviInfo.getUriInfo(),
+    final JPAODataRequestContextAccess subContext = new JPAODataInternalRequestContext(navigationInfo.getUriInfo(),
         requestContext);
-    return new JPAFilterCrossComplier(odata, sd, naviInfo.getEntityType(), converter, this,
-        naviInfo.getFromClause(), null, subContext);
+
+    final JPAFilterRestrictionsWatchDog watchDog = new JPAFilterRestrictionsWatchDog(this.association.getLeaf());
+    return new JPAFilterCrossComplier(odata, sd, navigationInfo.getEntityType(), converter, this,
+        navigationInfo.getFromClause(), null, subContext, watchDog);
   }
 
   @Override
@@ -163,11 +172,11 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
 
   private void createFromClauseJoinTable(final Map<String, From<?, ?>> joinTables, final Subquery<?> childQuery) {
     if (!hasRowLimit(childQuery)) {
-      final Optional<JPAEntityType> jtEt = childAssociation
+      final Optional<JPAEntityType> joinTableEt = childAssociation
           .map(JPAAssociationPath::getJoinTable)
           .map(JPAJoinTable::getEntityType);
-      jtEt.ifPresent(et -> {
-        debugger.trace(this, "Join table found: %s, join will be created", jtEt.toString());
+      joinTableEt.ifPresent(et -> {
+        debugger.trace(this, "Join table found: %s, join will be created", joinTableEt.toString());
         queryJoinTable = subQuery.from(et.getTypeClass());
         queryJoinTable.alias(association.getAlias());
         joinTables.put(association.getAlias(), queryJoinTable);
@@ -175,9 +184,11 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
     }
   }
 
-  void setFilter(final JPANavigationPropertyInfo naviInfo) throws ODataJPAModelException, ODataJPAProcessorException {
-    if (naviInfo.getFilterCompiler() == null)
-      naviInfo.setFilterCompiler(addFilterCompiler(naviInfo));
+  void setFilter(final JPANavigationPropertyInfo navigationInfo) throws ODataJPAModelException,
+      ODataJPAProcessorException,
+      ODataJPAQueryException {
+    if (navigationInfo.getFilterCompiler() == null)
+      navigationInfo.setFilterCompiler(addFilterCompiler(navigationInfo));
   }
 
   private List<Expression<?>> createGroupBy(final Subquery<?> childQuery,
@@ -185,8 +196,8 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
     if (!orderByAttributes.isEmpty()) {
 
       return selections.stream()
-          .map(p -> mapOnToSelection(p, queryRoot, childQuery))
-          .collect(toList());
+          .map(path -> mapOnToSelection(path, queryRoot, childQuery))
+          .collect(toList()); // NOSONAR
     }
     return emptyList();
   }
@@ -194,7 +205,7 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
   private List<Order> createOrderBy(final Subquery<?> childQuery) throws ODataApplicationException {
     if (!hasRowLimit(childQuery)) {
       final JPAOrderByBuilder orderByBuilder = new JPAOrderByBuilder(jpaEntity, queryRoot, cb, groups);
-      return orderByBuilder.createOrderByList(joinTables, navigationInfo.getUriInfo(), (JPAODataPage)null);
+      return orderByBuilder.createOrderByList(joinTables, navigationInfo.getUriInfo(), (JPAODataPage) null);
     }
     return emptyList();
   }
@@ -203,14 +214,15 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
     if (hasRowLimit(navigationInfo) && childQuery != null) {
       debugger.trace(this, "Row number required");
 
-      JPARowNumberFilterQuery rq;
+      JPARowNumberFilterQuery rowNumberQuery;
       try {
-        rq = new JPARowNumberFilterQuery(odata, requestContext, navigationInfo, parentQuery, childAssociation, jpaEntity
-            .getKeyPath());
+        rowNumberQuery = new JPARowNumberFilterQuery(odata, requestContext, navigationInfo, parentQuery,
+            childAssociation, jpaEntity
+                .getKeyPath());
       } catch (final ODataException e) {
         throw new ODataJPAQueryException(e, INTERNAL_SERVER_ERROR);
       }
-      return new JPAQueryPair(rq, this);
+      return new JPAQueryPair(rowNumberQuery, this);
     } else {
       debugger.trace(this, "Row number not required");
       return new JPAQueryPair(this, this);
@@ -221,8 +233,8 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
       final ProcessorSubquery<?> nextQuery) throws ODataApplicationException {
 
     if (hasRowLimit(childQuery))
-      this.queryRoot = nextQuery.from((ProcessorSubquery<?>) ((JPARowNumberFilterQuery) queries.getInner()).getSubQuery(
-          childQuery));
+      this.queryRoot = nextQuery.from((ProcessorSubquery<?>) ((JPARowNumberFilterQuery) queries.inner()).getSubQuery(
+          childQuery, null));
     else
       this.queryRoot = subQuery.from(this.jpaEntity.getTypeClass());
     navigationInfo.setFromClause(queryRoot);
@@ -274,21 +286,21 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
   }
 
   Expression<?> mapOnToSelection(final JPAPath on, final From<?, ?> root, @Nullable final Subquery<?> childQuery) {
-    final Path<?> p;
+    final Path<?> path;
     if (hasRowLimit(childQuery)) {
-      p = root.get(on.getAlias());
+      path = root.get(on.getAlias());
     } else {
-      p = ExpressionUtil.convertToCriteriaPath(root, on.getPath());
+      path = ExpressionUtility.convertToCriteriaPath(root, on.getPath());
     }
-    p.alias(on.getLeaf().getInternalName());
-    return p;
+    path.alias(on.getLeaf().getInternalName());
+    return path;
   }
 
   private List<Selection<?>> selectIn(final Subquery<?> childQuery, final List<JPAPath> selections) {
 
     return selections.stream()
-        .map(p -> mapOnToSelection(p, queryRoot, childQuery))
-        .collect(toList());
+        .map(path -> mapOnToSelection(path, queryRoot, childQuery))
+        .collect(toList());// NOSONAR
   }
 
   private List<JPAPath> selectionPathIn() throws ODataJPAQueryException {
@@ -298,7 +310,7 @@ class JPAExpandFilterQuery extends JPAAbstractSubQuery {
           : association.getJoinColumnsList();
       return columns.stream()
           .map(JPAOnConditionItem::getLeftPath)
-          .collect(toList());
+          .toList();
     } catch (final ODataJPAModelException e) {
       if (e.getId().equals(NO_JOIN_TABLE_TYPE.getKey())) {
         throw new ODataJPAQueryException(QUERY_PREPARATION_JOIN_TABLE_TYPE_MISSING, INTERNAL_SERVER_ERROR,
